# computer_network_final_project

./: .dockerignore  README.md  create_filesharex_structure.ps1  fsx_phase1.pcap
.github/workflows/: .gitignore
client/: CMakeLists.txt
client/src/: main.cpp  test_auth.cpp  test_file_transfer.cpp  test_persistent.cpp
core/: CMakeLists.txt
core/include/fsx/auth/: password_hash.h
core/include/fsx/common/: config.h
core/include/fsx/db/: db.h  session_repository.h  user_repository.h
core/include/fsx/log/: logger.h
core/include/fsx/net/: auth_handler.h  session_manager.h  tcp_server.h  tcp_session.h
core/include/fsx/protocol/: auth_messages.h  file_messages.h  message.h  online_messages.h
core/include/fsx/storage/: db_client.h  db_config.h  file_store.h
core/include/fsx/transfer/: transfer_manager.h
core/src/: main.cpp
core/src/auth/: password_hash.cpp
core/src/db/: db.cpp  session_repository.cpp  user_repository.cpp
core/src/log/: logger.cpp
core/src/net/: auth_handler.cpp  session_manager.cpp  tcp_server.cpp  tcp_session.cpp
core/src/storage/: db_client.cpp  db_config.cpp  file_store.cpp
core/src/transfer/: transfer_manager.cpp
docker/: compose.example.yml  compose.yml  core.Dockerfile  gateway.Dockerfile
docker/postgres/: init.sql
docs/: email_setup.md
docs/wireshark/: demo_scenarios.md  filters.md
gateway/: pyproject.toml
gateway/app/: core_client.py  main.py  settings.py
gateway/app/api/: routes_admin.py  ws_dashboard.py
gateway/app/services/: email_service.py  password_reset.py  user_session.py
gateway/app/static/css/: login.css  messenger.css  style.css
gateway/app/static/js/: dashboard.js  login.js  messenger.js  reset_password.js
gateway/app/templates/: dashboard.html  layout.html  login.html  messenger.html  reset_password.html
gateway/fsx_gateway.egg-info/: PKG-INFO  SOURCES.txt
scripts/: fix_wsl_docker.sh  fix_wsl_port_access.md  get_wsl_ip.sh  quick_test_phase3.sh  test_client.sh  test_phase3_comprehensive.ps1  test_phase3_file_transfer.sh  test_register_login.sh  test_system.sh  wsl_test_phase3.sh
